--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,7 +109,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --primary: #EC5252;
+    --primary: #81297f;
     --primary-foreground: #ffffff;
   }
 }
